--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@
     width: 100%;
 }
 .header__nav--li {
-    padding: 10px;
+    padding: 7px;
     font-family: 'Montserrat', sans-serif;
     display: inline-block;
 }
 .header__nav--li:hover {
     background: #01161e;
+    border-radius: 5%;
 }
 /* ESTILOS MAIN */
 
@@ -56,6 +57,11 @@
 }    
 .main__principal--imagen2{
     width: 80%;
+}
+.main__principal--audio {
+    display: block;
+    position: fixed;
+    bottom: 2%;
 }
 .main__principal--section {
     display: flex;
@@ -84,13 +90,17 @@
 }
 
 .main__principal--texto .letraColor {
-    color: #77a47b
+    color: #77a47b;
+}
+.main__principal--audio {
+    width: 295px;
+    height: 54px
 }
 .video {
     background-image: url(../multimedios/back4.jpg);
     background-size: 100%;
     color: #77a47b;
-    padding: 40px;
+    padding: 120px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -101,6 +111,7 @@
     left:0;
     top:0;
     position: sticky;
+    margin: 20%;
 }
 
 section>h3 {
@@ -111,28 +122,12 @@ section>h3 {
     justify-content: center;
     align-items: center;
     padding: 5%;
-    width: 40%;
+    width: 50%;
     position: relative;
 }
 .article__ul--li {
     display: inline;
     padding: 20px;
-}
-
-/*
-.moved {
-    transform: scale(1)
-}
-.moved__1 {
-    transform: translateY(-50px);
-}
-.transicion__img {
-    transition: all .3s linear;
-}
-.transicion__img:hover {
-    transform: scale(1.1, 1.1);
-    box-shadow: 0px 0px 15px #135058;
-    filter:contrast(1)
 }
 
 /* ESTILOS FOOTER */
@@ -141,7 +136,7 @@ footer {
     background-color: #01161e;
     padding-top: 2%;
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     justify-content: center;
     align-items: flex-end;
     color: #aec3b0;
@@ -152,31 +147,75 @@ footer>h4 {
     margin: 2px;
     padding: 10px;
 }
+.icon__footer {
+    display: flex;
+    justify-content: center;
+}
 .icon {
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    margin: 2%;
 }   
 .icon a {
     list-style-type: none;
     text-decoration: none;
     color: white;
 }
-.footerHome {
-    border-bottom: 2px solid #000405;
-    margin: 5%;
-    text-decoration: none;
-    list-style-type: none;
-    color: #aec3b0;
+.icon1 a:hover {
+    color: rgba(59, 89, 152, 1);
+}
+.icon2 a:hover {
+    color: #d6249f;
+}
+.icon3 a:hover {
+    color: rgba(255, 0, 0, 1);
+}
+.icon4 a:hover {
+    color: rgba(241, 87, 34, 1);
+}
+.icon5 a:hover {
+    color: rgba(30, 215, 96, 1)
+}
+.footerTexto {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-justify: auto;
+}
+.footerTexto__home {
+    display: block; 
+    justify-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.footerHome {
+    background:rgba(251, 253, 250, 0.2);
+    line-height: 3;
+    padding: 0.5em 3em;
+    margin: 1.5em;
+    position: relative;
+    text-decoration: none;
+    list-style-type: none;
+    color: #aec3b0;
+}
+.footerHome:hover {
+    color: antiquewhite;
+    font-size: 18px;
 }
 
 /* ESTILOS PAGINA VIDEOS */
 
-
+.main__principal--videos {
+    background-image: linear-gradient(146deg, #000405 0%, #000e0e 15%, #022d29 31%, #064558 64%, #01161e 100%);
+    background-size: 500%;
+    animation: fondoanim 10s infinite;
+}
 .section-article {
     display: flex;
     justify-content: center;
@@ -191,13 +230,11 @@ footer>h4 {
     top:0;
     width:100%;
 }
-/*
-.section__video {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: auto;
-    padding: 1%;
-    gap: 5%
+.letraColor__efecto {
+    white-space: nowrap;
+    overflow: hidden;
+    width: 10em;
+    animation: anim 4s infinite;
 }
 
 /* ESTILOS PAGINA BANDA */
@@ -271,7 +308,7 @@ footer>h4 {
     animation: slide_logo 4s ease infinite;
 }
 .main__principal--contacto {
-    background-color: #77a47b;
+    background-color: #135058;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -373,6 +410,135 @@ footer>h4 {
     grid-row: 8 / 9;
 }
 
+.accordion {
+    width: 95%;
+}
+.accordion-button:not(.collapsed) {
+    color: inherit;
+    background: #000405;
+    color: #aec3b0;
+}
+
+/* RESPONSIVE */
+/* tablet */
+@media only screen and (min-width: 481px) and (max-width: 978px) {
+    /* galeria */
+    .header__titulo {
+        font-size: 200%;
+        background-clip: linear-gradient(to top, #f1f2b5, #135058);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent; 
+    }
+    .grid-layout {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: 400px;
+        grid-gap: 10px;
+        background-size: cover;    
+        justify-self: center;
+    }
+    .grid-item6 {
+        grid-column: 3 / 6;
+    }
+    .grid-item8 {
+        grid-column: 1 / 6;
+        grid-row: 7 / 8;
+    }
+    .grid-item10 {
+        grid-column: 3 / 6;
+        grid-row: 8 / 9;
+    }
+    /* videos */
+    .section__video {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: auto;
+        padding: 1%;
+        gap: 5%
+    }
+    /* index */
+    .main__principal--section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 5%;
+    }
+    .main__principal--texto {
+        display: block;
+        box-sizing: border-box;
+        block-size: auto;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        padding: 10px;
+        font-style: italic;
+        font-family: 'Varela Round', sans-serif;
+        color: rgb(241, 237, 231);
+        font-size: larger;
+    }
+    .main__principal--audio {
+        display: flex;
+        position: relative;
+        width: 220px;
+        height: 40px
+    }
+    .video {
+        padding: 40px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .video> iframe {
+        left:0;
+        top:0;
+        height: 80%;
+        width:80%;        
+        position: sticky;
+    }
+    .article {
+        width: 60%;
+    }
+
+    /* banda */
+    .main__banda--li {
+        list-style-type: none;
+        text-decoration: none; 
+        display: flex;
+        flex-direction: column;
+        grid-gap: 3rem;
+        background-size: cover;   
+        margin-bottom: 0%;  
+    }
+    .main__banda3 {
+        margin-top: 0;
+    }
+    .main__banda--titulos {
+        position: absolute;
+        bottom: 0%;
+        color: #aec3b0;
+        background: linear-gradient(rgba(0,0,0,1),  rgba(0,0,0,0.5), rgba(255,255,255,0), rgba(0,0,0,1));
+        width: 100%;
+        margin: 0;
+        padding: 10px;
+    }
+    /* footer */
+    .iconify {
+        width: 30px;
+        height: 30px;
+    }
+    .footerTexto {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
 /* RESPONSIVE */
 /* mobile */
 @media only screen and (max-width: 480px) {
@@ -440,11 +606,11 @@ footer>h4 {
     }
     /* index */
     .main__principal--section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        padding: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5%;
     }
     .main__principal--texto {
         display: block;
@@ -455,6 +621,15 @@ footer>h4 {
         color: rgb(219, 218, 215);
         font-size: larger;
     }
+    .main__principal--audio {
+        display: flex;
+        position: relative;
+        width: 150px;
+        height: 30px
+    }
+    .video {
+        padding: 20px;
+    }
     .video> iframe {
         left:0;
         top:0;
@@ -462,6 +637,10 @@ footer>h4 {
         width:100%;
         position: sticky;
     }
+    .article {
+        width: 60%;
+    }
+
     /*banda */
     .main__banda--li {
         list-style-type: none;
@@ -493,101 +672,21 @@ footer>h4 {
         width: 8%;
         animation: slide_logo 4s ease infinite;
     }
-}
-
-/* RESPONSIVE */
-/* tablet */
-@media only screen and (min-width: 481px) and (max-width: 978px) {
-    /* galeria */
-    .header__titulo {
-        font-size: 200%;
-        background-clip: linear-gradient(to top, #f1f2b5, #135058);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent; 
+    /* footer */
+    .iconify {
+        width: 20px;
+        height: 20px;
     }
-    .grid-layout {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-auto-rows: 400px;
-        grid-gap: 10px;
-        background-size: cover;    
-        justify-self: center;
-    }
-    .grid-item6 {
-        grid-column: 3 / 6;
-    }
-    .grid-item8 {
-        grid-column: 1 / 6;
-        grid-row: 7 / 8;
-    }
-    .grid-item10 {
-        grid-column: 3 / 6;
-        grid-row: 8 / 9;
-    }
-    /* videos */
-    .section__video {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-auto-rows: auto;
-        padding: 1%;
-        gap: 5%
-    }
-    /* index */
-    .main__principal--section {
+    .footerTexto {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-        padding: 5%;
-    }
-    .main__principal--texto {
-        display: block;
-        box-sizing: border-box;
-        block-size: auto;
-        margin-block-start: 1em;
-        margin-block-end: 1em;
-        justify-content: center;
-        align-items: center;
-        width: 80%;
-        padding: 10px;
-        font-style: italic;
-        font-family: 'Varela Round', sans-serif;
-        color: rgb(241, 237, 231);
-        font-size: larger;
-    }
-    .video> iframe {
-        left:0;
-        top:0;
-        height:60%;
-        width:60%;
-        position: sticky;
-    }
-    /* banda */
-    .main__banda--li {
-        list-style-type: none;
-        text-decoration: none; 
-        display: flex;
-        flex-direction: column;
-        grid-gap: 3rem;
-        background-size: cover;   
-        margin-bottom: 0%;  
-    }
-    .main__banda3 {
-        margin-top: 0;
-    }
-    .main__banda--titulos {
-        position: absolute;
-        bottom: 0%;
-        color: #aec3b0;
-        background: linear-gradient(rgba(0,0,0,1),  rgba(0,0,0,0.5), rgba(255,255,255,0), rgba(0,0,0,1));
-        width: 100%;
-        margin: 0;
-        padding: 10px;
+        text-align: center;
     }
 }
 
 /* Animations */
-
+/* contactos */
 @keyframes slide_logo {
     0% {
         transform: translateX(0);
@@ -597,5 +696,22 @@ footer>h4 {
     }
     100% {
         transform: translateX(0vw);
+    }
+}
+/* videos textos */
+@keyframes anim {
+    from { width: 0;}
+}
+
+/*videos fondo */
+@keyframes fondoanim {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
     }
 }
