--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -9,5 +9,12 @@
     $font-principal: 'Varela Round', sans-serif;
     $font-secondary: 'Montserrat', sans-serif; 
     $font-third: 'Courier New', Courier, monospace;
-     
+    
+    $redes: ( /*Mapa */
+        facebook: rgba(59, 89, 152, 1),
+        instagram: #d6249f,
+        youtube: rgba(255, 0, 0, 1),
+        icloud: rgba(241, 87, 34, 1),
+        spotify: rgba(30, 215, 96, 1),
+    );
 
