--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,6 +4,7 @@
 
 /* ▼ Misc */ 
 @import './misc/normalize';
+@import './misc/mixins';
 @import './misc/variables';
 @import './misc/animations';
 
@@ -17,3 +18,6 @@
 @import './pages/banda';
 @import './pages/galeria';
 @import './pages/contacto';
+
+/* ▼ Partials estilos responsive */
+@import './partials/responsive'
