--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,4 @@
 /* ▼ main home */
-
 /* ESTILOS MAIN HOME*/
 
 .main__principal {
@@ -16,14 +15,12 @@
         bottom: 2%;
     }
     &--section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 5%;
+        @include flex(row, center, center, 0);
+        padding: 2rem;
     }
     &--texto {
         display: inline-block;
-        width: 40%;
+        width: 50%;
         padding: 20px;
         font-style: italic;
         font-family: $font-principal;
@@ -39,12 +36,11 @@
 }
 
 .transicion__texto {
-    width: 40%;
-    height: 40%;
+    width: auto;
+    font-size: 130%;
     transition: width 1s linear, heigth 1s ease-in-out;
     &:hover {
-        width: 60%;
-        height: 60%;
+        width: auto;
         background-color: $base;
         font-size: 130%;
     }
@@ -56,10 +52,7 @@
     color: $primary;
     padding: 120px;
     margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    @include flex(column, center, center, 0);
     &iframe {
         left:0;
         top:0;
@@ -72,110 +65,12 @@ section>h3 {
     font-size: x-large;
 }
 .article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 5%;
     width: 50%;
     position: relative;
+    @include flex(row, center, center, 0);
     &__ul--li {
         display: inline;
         padding: 20px;
     }    
-}
-
-/* ▼ RESPONSIVE @MEDIA QUERIES */
-/* ▼tablet */
-@media only screen and (min-width: 481px) and (max-width: 978px) {
-    /* index */
-    .main__principal {
-        &--section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 5%;
-        }
-        &--texto {
-            display: block;
-            box-sizing: border-box;
-            block-size: auto;
-            margin-block-start: 1em;
-            margin-block-end: 1em;
-            justify-content: center;
-            align-items: center;
-            width: 80%;
-            padding: 10px;
-            font-style: italic;
-            font-family: $font-principal;
-            color: rgb(241, 237, 231);
-            font-size: larger;
-        }
-        &--audio {
-            display: flex;
-            position: relative;
-            width: 220px;
-            height: 40px
-        }
-    }
-    .video {
-        padding: 40px;
-        margin: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        &> iframe {
-            left:0;
-            top:0;
-            height: 80%;
-            width:80%;        
-            position: sticky;
-        }        
-    }
-    .article {
-        width: 60%;
-    }
-}
-
-/* ▼mobile */
-@media only screen and (max-width: 480px) {
-    /* index */
-    .main__principal {
-        &--section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 5%;
-        }
-        &--texto {
-            display: block;
-            width: 60%;
-            padding: 20px;
-            font-style: italic;
-            font-family: $font-principal;
-            color: rgb(219, 218, 215);
-            font-size: larger;
-        }
-        &--audio {
-            display: flex;
-            position: relative;
-            width: 150px;
-            height: 30px
-        }  
-    }      
-    .video {
-        padding: 20px;
-        &> iframe {
-            left:0;
-            top:0;
-            height:100%;
-            width:100%;
-            position: sticky;
-        }        
-    }
-    .article {
-        width: 60%;
-    }
 }
