--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -32,21 +32,27 @@ footer {
         color: white;
     }    
     &1 a:hover {
-        color: rgba(59, 89, 152, 1);
+        color: map-get($redes, facebook);
     }
     &2 a:hover {
-        color: #d6249f;
+        color: map-get($redes, instagram);
     }
     &3 a:hover {
-        color: rgba(255, 0, 0, 1);
+        color: map-get($redes, youtube);
     }
     &4 a:hover {
-        color: rgba(241, 87, 34, 1);
+        color: map-get($redes, icloud);
     }
     &5 a:hover {
-        color: rgba(30, 215, 96, 1)
-    }    
+        color: map-get($redes, spotify);
+    }  
 }   
+@each $red, $color in $redes {
+    .icon__footer>icon>a --#{$red}{
+        box-shadow: 0px 0px 10px $color;
+    }
+}
+
 
 .footerTexto {
     display: flex;
@@ -77,34 +83,4 @@ footer {
         color: antiquewhite;
         font-size: 18px;
     }    
-}
-
-/* RESPONSIVE */
-/* tablet */
-@media only screen and (min-width: 481px) and (max-width: 978px) {
-    /* footer */
-    .iconify {
-        width: 30px;
-        height: 30px;
-    }
-    .footerTexto {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-}
-/* mobile */
-@media only screen and (max-width: 480px) {
-    /* footer */
-    .iconify {
-        width: 20px;
-        height: 20px;
-    }
-    .footerTexto {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
 }
