--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -2,6 +2,10 @@
 .header {
     background-color: $background-color;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
     &__titulo {
         color: $secondary;
         font-size: 280%;
@@ -14,7 +18,6 @@
         background-clip: none;
     }
     &__menu {
-        margin: auto;
         list-style-type: none;
         text-decoration: none;
         color: $primary;
